--- a/case-studies/posts/2023/08/21/references.bib
+++ b/case-studies/posts/2023/08/21/references.bib
@@ -110,3 +110,25 @@
   institution = {US Department of Agriculture, Agricultural Research Service},
   url = {https://www.ars.usda.gov/nea/bhnrc/fsrg}
 }
+
+@article{DBLP:journals/corr/abs-1810-04805,
+  author = {J. Devlin and M.{-}W. Chang and K. Lee and K. Toutanova},
+  title = {{BERT:} Pre-training of Deep Bidirectional Transformers for Language Understanding},
+  journal = {CoRR},
+  volume = {abs/1810.04805},
+  year = {2018},
+  url = {http://arxiv.org/abs/1810.04805},
+  eprinttype = {arXiv},
+  eprint = {1810.04805},
+  timestamp = {Tue, 30 Oct 2018 20:39:56 +0100},
+  biburl = {https://dblp.org/rec/journals/corr/abs-1810-04805.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@Conference{macavaney_et_al_2021,
+  author = {Macavaney, S. and Mittu, A. and Coppersmith, G. and Leintz, J. and Resnik, P.},
+  title = {Community-level research on suicidality prediction in a secure environment: Overview of the CLPsych 2021 shared task},
+  series = {In Proceedings of the Seventh Workshop on Computational Linguistics and Clinical Psychology: Improving Access},
+  year = {2021},
+  pages = {70-80}
+}
