nav buttons updated

--- a/case-studies/posts/2023/08/21/00-food-for-thought.qmd
+++ b/case-studies/posts/2023/08/21/00-food-for-thought.qmd
@@ -25,16 +25,18 @@ What if machine learning can help? That question inspired a competition, the Foo
 
 This collection of articles tells the story of the [Food for Thought Challenge](https://coleridgeinitiative.org/projects/food-for-thought). We begin by exploring the [policy issues](/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd) that drive the development of the PPC – the need to understand the national diet, developing healthy diet plans, and costing up those plans – and the issues posed by record linkage. Next, we learn about [the nature of the challenge and the structure of the competition in more detail](/case-studies/posts/2023/08/21/02-competition-design.qmd), and then the [three](/case-studies/posts/2023/08/21/03-first-place-winners.qmd) [winning](/case-studies/posts/2023/08/21/04-second-place-winners.qmd) [teams](/case-studies/posts/2023/08/21/05-third-place-winners.qmd) walk us through their solutions. We end the collection with some closing thoughts on [the value of competitions for addressing data scientific challenges in the public sector](/case-studies/posts/2023/08/21/06-value-of-competitions.qmd).
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Find more case studies](/case-studies/index.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Part 1: The Purchase to Plate Suite &rarr;](/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd)
+:::
 :::
 :::
 :::
