--- a/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
+++ b/case-studies/posts/2023/08/21/01-purchase-to-plate.qmd
@@ -64,16 +64,18 @@ An ongoing challenge to the linking problem is that both the scanner data and th
 
 Of the four parts of the PPS, establishing the matches is the most time-consuming task and constitutes at least 60 percent of the total budget. In the most recent round, we had 168 categories and each one went through 2-3 automated matching rounds; after each round, nutritionists spent an average of two hours reviewing the matches. This adds up to somewhere between 670 and 1,000 hours of review time. After the automated review, manual matching requires an additional 300 hours. Reducing the amount of time required to establish matches and link the FNDDS and retail scanner data sets may lead to significant time savings, resulting in faster data availability. That, in turn, could allow more timely policy-based research, and the mandated revision of the Thrifty Food Plan can continue with the most recent food price data.
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [&larr; Introduction](/case-studies/posts/2023/08/21/00-food-for-thought.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Part 2: Competition design &rarr;](/case-studies/posts/2023/08/21/02-competition-design.qmd)
+:::
 :::
 :::
 :::
