--- a/case-studies/posts/2023/08/21/03-first-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/03-first-place-winners.qmd
@@ -147,16 +147,18 @@ As mentioned previously, we only used the given 2017--2018 PPC dataset as our pr
 ## Lessons learned 
 It was interesting that the random forest model performed better than the vanilla neural network model. This shows that a simple solution can work better, depending on the application. This observation is in line with the well-established principle in machine learning that the choice of model should be guided by the nature of the problem and the characteristics of the data. In this case, the random forest model, being a simpler and more interpretable model, was better suited to the problem at hand and was able to outperform the more complex neural network model. These results underscore the importance of careful model selection and the need to consider both the complexity of the model and the specific requirements of the problem when choosing an algorithm for a particular application. 
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [&larr; Part 2: Competition design](/case-studies/posts/2023/05/XX/02-competition-design.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Part 4: Second place winners &rarr;](/case-studies/posts/2023/05/XX/04-second-place-winners.qmd)
+:::
 :::
 :::
 :::
