--- a/case-studies/posts/2023/08/21/04-second-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/04-second-place-winners.qmd
@@ -70,16 +70,18 @@ Our next step will focus on adding the newly generated EC data into our knowledg
 
 2. **Multi-label models may not work well on UPC-EC data.** In our early work, we tried to consider the UPC-EC matching task as a multi-label problem, e.g., we labeled each EC as a binary label which indicated whether the EC was an appropriate match or not. We mapped UPC and EC pairs into a multi-label table. However, we find that the UPC and EC keeps a one-to-one relation for most UPCs. The model performance of a multi-label model, i.e., Label-Specific Attention Network (LSAN) **[5]**, is lower than base-string model on both Success@5 and NDCG@5 metrics. 
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [&larr; Part 3: First place winners](/case-studies/posts/2023/05/XX/03-first-place-winners.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Part 5: Third place winners &rarr;](/case-studies/posts/2023/05/XX/05-third-place-winners.qmd)
+:::
 :::
 :::
 :::
