--- a/case-studies/posts/2023/08/21/05-third-place-winners.qmd
+++ b/case-studies/posts/2023/08/21/05-third-place-winners.qmd
@@ -90,16 +90,18 @@ In the future, with more time available, we would train on all data, not just ou
 
 We recommend that future challenges provide every team with both a CPU and a GPU in their workspace, to avoid transitioning from one to the other midway through the challenge. In addition, if possible, it would be very helpful to provide a mechanism for running jobs in the background. Finally, it may be useful for teams to submit snippets of code along with library package names, in order for the installations to be tested properly beforehand.
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [← Part 4: Second place winners](/case-studies/posts/2023/05/XX/04-second-place-winners.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Part 6: The value of competitions →](/case-studies/posts/2023/05/XX/06-value-of-competitions.qmd)
+:::
 :::
 :::
 :::
