--- a/case-studies/posts/2023/08/21/06-value-of-competitions.qmd
+++ b/case-studies/posts/2023/08/21/06-value-of-competitions.qmd
@@ -42,16 +42,18 @@ More generally, in addition to the excitement of the new approaches, this exerci
 
 We hope that the articles in this collection provide not only the first steps towards a handbook of best practices, but also an inspiration to share lessons learned, so that success can be emulated, and failures understood and avoided.  
 
+::: nav-btn-container
 ::: grid
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [&larr; Part 5: Third place winners](/case-studies/posts/2023/05/XX/05-third-place-winners.qmd)
 :::
 :::
 
-::: {.g-col-12 .g-col-md-6}
-::: article-btn
+::: {.g-col-12 .g-col-sm-6}
+::: {.nav-btn}
 [Find more case studies](/case-studies/index.qmd)
+:::
 :::
 :::
 :::
