intro added - still need repo links

--- a/case-studies/posts/2023/08/21/02-competition-design.qmd
+++ b/case-studies/posts/2023/08/21/02-competition-design.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Food for Thought: Competition and challenge design"
-# description: |
-#   Stephanie Hare, author of 'Technology is Not Neutral', talks to Real World Data Science about the 'wicked problem' of technology and AI ethics, and why laws and regulations are 'necessary but insufficient' to minimise harms. 'We’re going to have to inculcate an entire new mindset,' she argues.        
+description: |
+  From structure to setup, to metrics, results, and lessons learned, Zheyuan Zhang and Uyen Le give an overview of the design of the Food for Thought Competition.       
 categories:
   - Machine learning
   - Natural language processing
